# pdf_translate_vue

./: .env.example  .env.production  .gitignore  CLAUDE.md  Makefile  README.md  REFACTOR_STATUS.md  TESTING_PLAN.md  diagrama_capas_mermaid  diagrama_flujo_mermaid  diagrama_flujo_pro  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  railway.toml  requirements.txt  test_s3_migration.py
backend/: Dockerfile  README.md  __init__.py  main.py  main_original.py  requirements.txt
backend/api/: __init__.py  dependencies.py
backend/api/middleware/: __init__.py  error_handler.py
backend/api/routes/: download.py  health.py  translation.py  upload.py
backend/services/: __init__.py  file_service.py  task_service.py  translation_service.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/storage/: s3.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_services/: test_file_service.py
docs/source/: backend.rst  conf.py  index.rst  worker.rst
pdf-translator/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
pdf-translator/src/: App.vue  main.ts  vite-env.d.ts
pdf-translator/src/api/: client.ts  pdfs.ts
pdf-translator/src/assets/: main.css
pdf-translator/src/components/: ConfigurationPanel.vue  ErrorBanner.vue  FileUploader.vue  LanguageSelect.vue  MainLayout.vue  ModelSelect.vue  PdfEditor.vue  ProgressBar.vue  ProgressCircle.vue  ResultPDF.vue  TranslationEditor.vue  UploadPDF.vue
pdf-translator/src/plugins/: axios.js
pdf-translator/src/router/: index.ts
pdf-translator/src/stores/: authStore.ts  translationStore.ts
pdf-translator/src/types/: api.ts  index.ts  schemas.ts
shared/: __init__.py
shared/config/: __init__.py  base.py  constants.py  environments.py
shared/models/: __init__.py  exceptions.py  task.py  translation.py
shared/utils/: __init__.py  file_utils.py  logging_utils.py  validation.py
worker/: Dockerfile  __init__.py  preload_models.py  requirements.txt  tasks.py  tasks_original.py
worker/core/: __init__.py  orchestrator.py
worker/core/document/: __init__.py  analyzer.py  extractor.py  reconstructor.py
worker/core/fonts/: __init__.py  manager.py  registry.py
worker/core/fonts/assets/: README.md
worker/core/translation/: __init__.py  language_detector.py  translator.py
worker/infrastructure/: __init__.py  celery_app.py
worker/infrastructure/ocr/: __init__.py  layoutparser_adapter.py
worker/src/: hola.txt
worker/tests/: __init__.py  conftest.py
(+10 files in other folders)
